--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,3 +9,9 @@ ja:
         confirming: "入金確認"
         producing: "発送準備中"
         sent: "発送済み"
+    order_item:
+      make_status:
+        unable: "製作不可"
+        waiting: "製作待ち"
+        production: "制作中"
+        completed: "製作完了"
