--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,6 +8,7 @@ ja:
         waiting: "入金待ち"
         confirming: "入金確認"
         producing: "発送準備中"
+        preparing: "発送準備中"
         sent: "発送済み"
     order_item:
       make_status:
