--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,7 +7,7 @@ ja:
       order_status:
         waiting: "入金待ち"
         confirming: "入金確認"
-        producing: "発送準備中"
+        producing: "制作中"
         preparing: "発送準備中"
         sent: "発送済み"
     order_item:
